Update UI : - Menambahkan style untuk color - Menambahkan halaman login - Mengcustom widget label dan input

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.program_visit">
+
     <application
         android:label="program_visit"
         android:name="${applicationName}"
