--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,17 @@
 name: program_visit
 description: "A new Flutter project."
 
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
   sdk: ^3.7.2
 
-
 #--------------------------- PACKAGES -------------------------#
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # Utility Packages
   google_maps_flutter: ^2.12.1
   http: ^1.3.0
@@ -34,10 +33,7 @@ flutter:
 
   #----------------------------- LOCAL ASSETS --------------------------#
   assets:
-    - assets/logos/
     - assets/icons/
-    - assets/images/
-    - assets/fonts/
 
   #----------------------------- LOCAL ASSETS --------------------------#
   fonts:
