--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   # Icons
   cupertino_icons: ^1.0.8
+  go_router: ^15.1.2
 
   # State Management
 
@@ -34,6 +35,7 @@ flutter:
   #----------------------------- LOCAL ASSETS --------------------------#
   assets:
     - assets/icons/
+    - assets/images/
 
   #----------------------------- LOCAL ASSETS --------------------------#
   fonts:
