--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,14 @@ dependencies:
 
   # Utility Packages
   google_maps_flutter: ^2.12.1
-  http: ^1.3.0
+  http: ^1.4.0
 
   # Icons
   cupertino_icons: ^1.0.8
   go_router: ^15.1.2
+  flutter_dotenv: ^5.2.1
+  shared_preferences: ^2.5.3
+  awesome_snackbar_content: ^0.1.6
 
   # State Management
 
