--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - .env
 
   #----------------------------- LOCAL ASSETS --------------------------#
   fonts:
