--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   shared_preferences: ^2.5.3
   awesome_snackbar_content: ^0.1.6
+  loading_animation_widget: ^1.3.0
 
   # State Management
 
