--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   shared_preferences: ^2.5.3
   awesome_snackbar_content: ^0.1.6
   loading_animation_widget: ^1.3.0
+  flutter_secure_storage: ^9.2.4
+  jwt_decoder: ^2.0.1
 
   # State Management
 
