--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   flutter_secure_storage: ^9.2.4
   jwt_decoder: ^2.0.1
+  dropdown_button2: ^2.3.9
 
   # State Management
 
